--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,10 @@
     <string name="FotosRecomendadas">Fotos Recomendadas</string>
     <string name="TituloBarraLista">Modelos</string>
     <string name="TituloBarraCategorias">Categorias</string>
+    <string name="TituloBarraHome">Fotos Chicas Premium</string>
     <string name="menu_Home">Inicio</string>
     <string name="menu_Categorias">Categorias</string>
     <string name="menu_Compartir">Compartir</string>
+
+
 </resources>
