--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,22 @@
 <resources>
-    <string name="app_name">FotosPremium</string>
+    <string name="app_name">Fotos Chicas Premium</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="NuestrasCategorias">Categorias</string>
     <string name="FotosRecomendadas">Fotos Recomendadas</string>
     <string name="TituloBarraLista">Modelos</string>
+    <string name="TituloBarraVerPersona">Ver Modelos</string>
     <string name="TituloBarraCategorias">Categorias</string>
     <string name="TituloBarraHome">Fotos Chicas Premium</string>
     <string name="menu_Home">Inicio</string>
     <string name="menu_Categorias">Categorias</string>
     <string name="menu_Compartir">Compartir</string>
+    <!-- API Google AdMob -->
+    <string name="admob_app_id">ca-app-pub-2918954216814904~2881674747</string>
+
+    <string name="admob_banner_ad1">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="admob_banner_ad2">ca-app-pub-3940256099942544/6300978111</string>
 
 
 </resources>
