boton compartir menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="NuestrasCategorias">Categorias</string>
+    <string name="share_app_message">Fotos Chicas Premium Mira Las Mejores Fotos De Mujeres Hermosas</string>
     <string name="FotosRecomendadas">Fotos Recomendadas</string>
     <string name="TituloBarraLista">Modelos</string>
     <string name="TituloBarraVerPersona">Ver Modelos</string>
